<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/equ"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/equ"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toTopOf="@+id/three" />

    <Button
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/three"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/decimal"
        app:layout_constraintEnd_toStartOf="@+id/equ"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/div"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:text="@string/div"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintEnd_toStartOf="@+id/multi"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/first_text" />

    <Button
        android:id="@+id/zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/zero"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/decimal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/four"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/five"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/six"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/nine" />

    <Button
        android:id="@+id/minus"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/minus"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/multi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/multi"
        app:layout_constraintTop_toTopOf="@+id/multi" />

    <Button
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/one"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/decimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/decimal"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equ"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/three"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/multi"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:text="@string/multi"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintStart_toEndOf="@+id/div"
        app:layout_constraintTop_toBottomOf="@+id/first_text" />

    <Button
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/two"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/five"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/eight"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/div" />

    <Button
        android:id="@+id/seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/seven"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

    <Button
        android:id="@+id/plus"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/plus"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/multi" />

    <TextView
        android:id="@+id/first_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="4"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002" />

    <TextView
        android:id="@+id/second_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/third_text"
        app:layout_constraintEnd_toStartOf="@+id/kigou"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/third_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/multi"
        app:layout_constraintEnd_toStartOf="@+id/kigou"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_text" />

    <TextView
        android:id="@+id/kigou"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="72sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/minus"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:text="@string/c"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintEnd_toStartOf="@+id/div"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_text" />

    <Button
        android:id="@+id/nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/nine"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/multi" />
</androidx.constraintlayout.widget.ConstraintLayout>